fix: add slider__container, remove 'overflow: hidden;' property from .slider

--- a/christmas-shop/css/style.css
+++ b/christmas-shop/css/style.css
@@ -625,7 +625,6 @@ body {
 }
 
 .slider {
-  overflow: hidden;
 }
 
 .slider__slides {
